--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -106,7 +106,7 @@ jobs:
           git commit -m "Auto update Docker image tag to $BRANCH_NAME"
           git push origin $BRANCH_NAME
 
-          # Create PR using safe jq-based JSON
+          # Create PR using jq-based JSON payload
           PR_PAYLOAD=$(jq -n \
             --arg title "Auto-generated PR" \
             --arg head "$BRANCH_NAME" \
@@ -130,7 +130,9 @@ jobs:
             exit 1
           fi
 
-          # Only enable auto-merge if this is not a manual trigger
+          echo "Created PR #$PR_NUMBER"
+          sleep 5  # Delay to ensure PR is available for auto-merge
+
           if [[ "${{ github.event_name }}" == "push" ]]; then
             echo "Enabling auto-merge for PR #$PR_NUMBER"
             curl -s -X PUT \
