Simplify spec2017 image build by removing ISO mount
Replaced ISO-based installation with local application mount.
This allows building spec2017 images directly from a local
application directory instead of mounting the ISO file.

--- a/workloads/spec2017/Dockerfile
+++ b/workloads/spec2017/Dockerfile
@@ -5,9 +5,6 @@ FROM ubuntu:focal
 
 INCLUDE+ ./common/Dockerfile.common
 
-# Copy spec2017
-COPY ./workloads/spec2017/cpu2017-1_0_5.iso $tmpdir
-
 USER root
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
     gfortran \
@@ -20,16 +17,7 @@ RUN cd $tmpdir && wget https://apt.llvm.org/llvm.sh
 RUN chmod u+x llvm.sh
 RUN sudo ./llvm.sh 16
 
-COPY ./workloads/spec2017/compile-538-clang.sh $tmpdir
-COPY ./workloads/spec2017/memtrace.cfg $tmpdir
-
-RUN mkdir -p $tmpdir/cpu2017_install
-RUN mount -t iso9660 -o ro,exec,loop $tmpdir/cpu2017-1_0_5.iso $tmpdir/cpu2017_install
-
-RUN mkdir -p $tmpdir/cpu2017
-RUN cd $tmpdir/cpu2017_install && echo "yes" | ./install.sh -d $tmpdir/cpu2017
-RUN cp $tmpdir/memtrace.cfg $tmpdir/cpu2017/config/memtrace.cfg
-RUN cp $tmpdir/compile-538-clang.sh $tmpdir/cpu2017/benchspec/CPU
+RUN mkdir -p $tmpdir/application
 
 # Start your application
 CMD ["/bin/bash"]
