--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - singularity
   workflow_dispatch: # Allows manual triggering of the workflow
 
 permissions:
