Add GCP infrastructure setup with Terraform
- Introduced Terraform configuration files for deploying GCP infrastructure, including main.tf, outputs.tf, variables.tf, and a sample terraform.tfvars.example.
- Added a startup script for instance initialization, including package updates and Docker installation.
- Updated .gitignore to exclude Terraform state files and sensitive information.
- Created a README.md to guide users through the setup and authentication process for GCP.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 workloads/spec2017/cpu2017-1_0_5.iso
 scarab_builds/*
+
+# Terraform files
+*.tfstate
+*.tfstate.backup
+.terraform/
+.terraform.lock.hcl
+
+# GCP-specific ignores
+gcp/.terraform/
+gcp/.ssh/
+gcp/terraform.tfvars
