Update .gitignore to include Python-related files and re-add cookies.txt
- Added Python cache and bytecode files to .gitignore to prevent unnecessary clutter in version control.
- Re-included gcp/cookies.txt in .gitignore to ensure it remains excluded from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ gcp/.terraform/
 gcp/.ssh/
 gcp/terraform.tfvars
 gcp/cookies.txt
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.py[cod]
+.ipynb_checkpoints/
