spec2017 build image: tar file has precompiled rate_int/float applications. No need to re-compile in your container.

--- a/workloads/spec2017/Dockerfile
+++ b/workloads/spec2017/Dockerfile
@@ -16,8 +16,12 @@ WORKDIR $tmpdir
 RUN cd $tmpdir && wget https://apt.llvm.org/llvm.sh
 RUN chmod u+x llvm.sh
 RUN sudo ./llvm.sh 16
-
+RUN echo "copying spec2017.tar.gz to $tmpdir/application"
 RUN mkdir -p $tmpdir/application
+COPY ./workloads/spec2017/spec2017.tar.gz $tmpdir/application/
+RUN echo "extracting spec2017.tar.gz to $tmpdir/application"
+RUN tar -xzf $tmpdir/application/spec2017.tar.gz -C $tmpdir/application && rm $tmpdir/application/spec2017.tar.gz
+RUN echo "done"
 
 # Start your application
 CMD ["/bin/bash"]
