--- a/workloads/spec2006/Dockerfile
+++ b/workloads/spec2006/Dockerfile
@@ -11,6 +11,16 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
     lsb-release \
     software-properties-common
 
+# SPEC CPU2006 Build Configuration
+# 
+# Build command:
+#   runspec --config=Example-linux64-amd64-gcc43+ --action=build --size=ref all
+#
+# Build error fixes:
+#   - 400.perlbench: Add -std=gnu89
+#   - 416.gamess:    Add -std=legacy
+#   - 447.dealII:    Add -std=c++03
+#   - 450.soplex:    Add -std=c++03
 WORKDIR $tmpdir
 RUN mkdir -p $tmpdir/application
 
