--- a/common/Dockerfile.common
+++ b/common/Dockerfile.common
@@ -36,6 +36,7 @@ COPY ./common/scripts/run_trace_post_processing.sh /usr/local/bin/run_trace_post
 COPY ./common/scripts/gather_fp_pieces.py /usr/local/bin/gather_fp_pieces.py
 COPY ./common/scripts/run_simpoint_trace.py /usr/local/bin/run_simpoint_trace.py
 COPY ./common/scripts/minimize_trace.sh /usr/local/bin/minimize_trace.sh
+COPY ./common/scripts/replace_oversized_simpoints.py /usr/local/bin/replace_oversized_simpoints.py
 COPY ./common/scripts/root_entrypoint.sh /usr/local/bin/root_entrypoint.sh
 COPY ./common/scripts/user_entrypoint.sh /usr/local/bin/user_entrypoint.sh
 COPY ./common/scripts/run_memtrace_single_simpoint.sh /usr/local/bin/run_memtrace_single_simpoint.sh
